# xfce-animated-wallpaper

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: build.cmake  sanitizers.cmake
src/: Application.cpp  Application.hpp  Monitor.hpp  Options.hpp  WallpaperWindow.cpp  WallpaperWindow.hpp  main.cpp
